{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 10,
  "lineage": "d937115e-ebed-a17a-6d33-eef85da3877a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dream_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c1c093c5c9344ab",
            "arn": "arn:aws:ec2:eu-north-1:160358212685:instance/i-0825ba89aa29a3c84",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0825ba89aa29a3c84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dream-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0597b21287ca4ab2e",
            "private_dns": "ip-10-0-1-202.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-51-20-120-193.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.120.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053dc23ec01b16db7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aef9f8aa54cbf4ea",
            "tags": {
              "Environment": "production",
              "Name": "dream-app-server",
              "Project": "dream-vacation-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "dream-app-server",
              "Project": "dream-vacation-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f3e8f4e2e9c83716"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dream_sg",
            "aws_subnet.dream_subnet",
            "aws_vpc.dream_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dream_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:160358212685:internet-gateway/igw-0c5940bbe4c5a92f4",
            "id": "igw-0c5940bbe4c5a92f4",
            "owner_id": "160358212685",
            "tags": {
              "Environment": "production",
              "Name": "dream-igw",
              "Project": "dream-vacation-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "dream-igw",
              "Project": "dream-vacation-app"
            },
            "vpc_id": "vpc-0bc18dccc569b5bb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dream_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:160358212685:route-table/rtb-0b93dddb2ed0f4186",
            "id": "rtb-0b93dddb2ed0f4186",
            "owner_id": "160358212685",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5940bbe4c5a92f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "dream-rt",
              "Project": "dream-vacation-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "dream-rt",
              "Project": "dream-vacation-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc18dccc569b5bb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dream_igw",
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dream_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0575d3b27a2c94a3e",
            "route_table_id": "rtb-0b93dddb2ed0f4186",
            "subnet_id": "subnet-0aef9f8aa54cbf4ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dream_igw",
            "aws_route_table.dream_rt",
            "aws_subnet.dream_subnet",
            "aws_vpc.dream_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dream_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:160358212685:security-group/sg-0f3e8f4e2e9c83716",
            "description": "Allow SSH and HTTP access for Dream Vacation App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3e8f4e2e9c83716",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App port 3001",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App port 8081",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dream-sg",
            "name_prefix": "",
            "owner_id": "160358212685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "dream-sg",
              "Project": "dream-vacation-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "dream-sg",
              "Project": "dream-vacation-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc18dccc569b5bb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dream_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:160358212685:subnet/subnet-0aef9f8aa54cbf4ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aef9f8aa54cbf4ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160358212685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "dream-subnet",
              "Project": "dream-vacation-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "dream-subnet",
              "Project": "dream-vacation-app"
            },
            "vpc_id": "vpc-0bc18dccc569b5bb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dream_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dream_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:160358212685:vpc/vpc-0bc18dccc569b5bb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03691acec3b9bd120",
            "default_route_table_id": "rtb-02072253bcb0711ad",
            "default_security_group_id": "sg-0883c696edf91c77e",
            "dhcp_options_id": "dopt-0712880f573f54222",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc18dccc569b5bb1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02072253bcb0711ad",
            "owner_id": "160358212685",
            "tags": {
              "Environment": "production",
              "Name": "dream-vpc",
              "Project": "dream-vacation-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "dream-vpc",
              "Project": "dream-vacation-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}